--- a/oopy.html
+++ b/oopy.html
@@ -10,6 +10,9 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="assets/js/skulpt.min.js" type="text/javascript"></script>
+		<script src="assets/js/skulpt-stdlib.js" type="text/javascript"></script>
+		<script src="assets/js/coderunner.js" type="text/javascript"></script>
 	</head>
 	<body class="is-preload">
 
@@ -30,28 +33,119 @@
 									<header class="main">
 										<h1>Object Oriented Programming</h1>
 									</header>
-
+<p>In programming, an object is a data structure that has user-defined properties and methods associated with it. 
+	Objects are very useful in programming because they allow us to store lots of information and run specific functions according to object-oriented programming--
+	for instance, we can create a Dog object with properties like name and age and run functions like do_a_trick.
+</p>
 									<hr class="major" />
 
-									<h2>Methods and Attributes</h2>
-									<p>methods and like functions for classes, while attributes are variables for classes. Lets take a look at how these appear in a class:</p>
-<pre><code>class Dog(object):
+									<h2>Methods and Properties</h2>
+									<p>Methods are like functions for classes, while properties are variables for classes. Lets take a look at how these appear in a class:</p>
+<form>
+<textarea rows=12 id="code1">class Dog(object):
 	#__init__ is a special method, you may see other special methods with underscores
 	def __init__(self, color, age):
 
-		# Attributes can be used throughout the class with the tag self
+		# properties can be used throughout the class with the tag self
 		self.color = color # self.color is an attribute
 		self.age = age # self.age is also an attribute
+		self.cuteness = 100 # this is also an attribute
 	
 	# This is a method, because it is in the class Dog
 	def birthday(self):
-		self.age += 1 # note we change the value of attribute self.age here
-</code></pre>
-									<hr class="major" />
+		self.age += 1 # note we change the value of attribute self.age here</textarea>
+<button onclick="runboi('code1', 'output1')" type="button">Run</button>
+<pre id="output1"></pre>
+</form>
+<p>In the Dog object above the properties are <code>self.color</code>, <code>self.age</code>, and <code>self.cuteness</code>. 
+Note the difference between properties and variables--properties are a type of variable that can only be referenced with respect to an object.
+</p>
+<p>So how do we use an object? It's actually fairly simple:</p>
+<form>
+<textarea rows=16 id="code2">class Dog(object):
+	def __init__(self, color, age):
+		self.color = color
+		self.age = age 
+		self.cuteness = 100 
+	
+	def birthday(self):
+		self.age += 1
 
-									<h2> More Coming Soon... </h2>
+Spots = Dog("brown", 3)
+print("Spots' color is " + Spots.color)
+print("Spots' cuteness is " + str(Spots.cuteness))
+print("Spots' age is " + str(Spots.age))
+Spots.birthday()
+print("After celebrating his birthday, Spots is now %d years old!" %Spots.age)	
+print(type(Spots) == Dog)</textarea>
+<button onclick="runboi('code2', 'output2')" type="button">Run</button>
+<pre id="output2"></pre>
+</form>
+<p>When we create Spots above, Spots is a variable that belongs to the Dog class! 
+	This means Spots is an <b>instance</b> of that class--we can actually see this in the last line of code, where <code>type(Spots)</code> returns Dog! 
+	You'll see that you can access the properties of the Spots instance by typing its name, a period, and what attribute you want to access (for example, <code>Spots.age</code>).</p>
+<p>Similarly, if we want to use a method (fuction) of an object, we type the instance's name (Spots), a period, the function name, brackets, and whatever <code>arguments</code> that method needs. 
+Here, when we call <code>Spots.birthday()</code>, we run the birthday function, which increases Spots' age by 1. 
+Since this directly updates the value of the age attribute, the next time we use Spots.age, it'll be 4!</p>
+<p>Note that the argument <code>self</code> is <b>only</b> used inside the code for the Dog object, and not for any instances. 
+What this means is when you create Spots, you don't need to enter anything in the brackets for <code>self</code>--as seen on line 10 in the code above, we only need to set Spots' age and color. 
+Note also that we don't necessarily need all properties to come from arguments! <code>self.cuteness</code> is set to 100 and doesn't rely on any arguments.</p>
 
-								</section>
+<hr class="major" />
+<h2>Inheritance</h2>
+<p>Now that we know how to create a Dog, our next step might be to create specific types of Dogs. 
+	For example, we can create golden retrievers, border collies, and, God rest their demonic souls, chihuahuas. 
+	Obviously, each of these breeds are all dogs--so instead of creating an entirely new object for each of them, we can actually make them <b>subclasses</b> of the Dog object. 
+	In the following example, we'll be creating a racing_dog that inherits the Dog object's properties and adds a property for speed; it will also be able to race in addition to having birthdays. 
+	Lastly, when a racing_dog has a birthday, the Racing Committee will give it a special birthday congratulation, so we want to <b>add</b> to the existing birthday function.
+</p>
+<pre><code>class Dog(object):
+	def __init__(self, color, age):
+		self.color = color
+		self.age = age 
+		self.cuteness = 100 
+	
+	def birthday(self):
+		self.age += 1
+
+class racing_dog(Dog):
+	def __init__(self, color, age, speed):
+		super().__init__(color, age) # we go to Dog's __init__ and do everything there with the given color and age
+		self.speed = speed # this wasn't defined in Dog, so we have to write it out here
+	
+	def race(self):
+		self.speed *= 2 # multiply its speed by 2
+	
+	def birthday(self):
+		super().birthday() # we go to Dog's birthday function and do everything there
+		print("Happy %dth birthday!" %self.age) #then we print out this birthday message
+
+Buddy = racing_dog("yellow", 5, 3)
+print("Buddy's initial speed is %d" %self.speed)
+Buddy.race()
+print("When racing, his speed is %d" %self.speed)
+Buddy.birthday() # this will print out the birthday message</code></pre>
+<p>Note: Unfortunately our online coderunner isn't advanced enought to handle inheritance, so you're going to have to copy and paste this code into VS Code and run it there. D:</p>
+<p>We see that <code>super()</code> essentially references the superclass, Dog, and runs the corresponding function there!</p>
+<p>Lastly, if we want to check the type/instance of a subclass, <code>type()</code> and <code>isinstance()</code> start to differ. Example:</p>
+<form>
+<textarea rows=12 id="code3">class Dog(object): pass #we're just not going to do anything in these classes
+class racing_dog(Dog): pass
+Spots = Dog()
+Buddy = racing_dog()
+print(type(Spots) == Dog) # True
+print(type(Buddy) == Dog) # False
+print(type(Spots) == racing_dog) # False
+print(type(Buddy) == racing_dog) # True
+print(isinstance(Spots, Dog)) # True
+print(isinstance(Buddy, Dog)) # True (surprised?)
+print(isinstance(Spots, racing_dog)) # False
+print(isinstance(Buddy, racing_dog)) # True</textarea>
+<button onclick="runboi('code3', 'output3')" type="button">Run</button>
+<pre id="output3"></pre>
+</form>
+
+</section>
 
 						</div>
 					</div>
